0223 send message to change popup html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
       <img src="../icon/icon.png" alt="">
       <h2>疫距兩得</h2>
     </div>
-    <input type="text" id="name" placeholder="請輸入Google帳號名字">
-    <!-- <input type="text" id="studentID" placeholder="輸入你的學號"> -->
-    <button id="start">開始上課</button>
-    <button id="end">結束課程</button>
+    <div id="not_classing">
+      <input type="text" id="name" placeholder="請輸入Google帳號名字">
+      <button id="start">開始上課</button>
+    </div>
+    <div id="is_classing">
+      <h2>上課中...</h2><br>
+      <button id="end">結束課程</button>
+    </div>
 
 
     <script src="./js/script.js"></script>
