--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <img src="../icon/icon.png" alt="">
       <h2>疫距兩得</h2>
     </div>
+    <p id="loading">loading...</p>
     <div id="not_classing">
       <input type="text" id="name" placeholder="請輸入Google帳號名字">
       <button id="start">開始上課</button>
@@ -18,6 +19,7 @@
     <div id="is_classing">
       <h2>上課中...</h2><br>
       <button id="end">結束課程</button>
+      <!-- <button id="reload">重新載入</button> -->
     </div>
 
 
