add reload button

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <button id="end">結束課程</button>
       <!-- <button id="reload">重新載入</button> -->
     </div>
-
-
+    <button id="reload">若有問題，請點此重新載入</button>
     <script src="./js/script.js"></script>
   </body>
 </html>
