--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html style="width:200px;">
   <head>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <title>疫距兩得</title>
+    <title>疫距數得</title>
     <meta charset="UTF-8">
   </head>
 
   <body id="body">
     <div class="title">
       <img src="../icon/icon.png" alt="">
-      <h2>疫距兩得</h2>
+      <h2>疫距數得</h2>
     </div>
     <p id="loading">loading...</p>
     <div id="not_classing">
